16.11.2010
        - Fixed mixer maximum and minimum sizes. (Tim)
          Bit of a tough hack. Is there a better way? Done by sub-classing QScrollArea and catching 
           LayoutRequest events, just before paint events when the window sizes are finally correct.
          TODO: Still off by a few pixels when mixer first opened, because main window frameSize 
           is not set yet, by the time LayoutRequest is caught.
14.11.2010
        - renamed deicsonze2 files and classes with '2' suffixes
        - Applied patch by Orcan to convert populateAddSynth(). (Tim)
        - Changed all setMargin() calls to setContentsMargins(). (setMargin() is obsoleted!) (Tim)
        - Fixed crash in MusE::closeEvent() upon close: save, skip, abort? = abort. (Tim)
          TODO: Some other suspicious looking closeEvent()s. May need to fix...
12.11.2010
        - Fixed arranger alignment issues - set layout margins to zero. (Tim)
          TODO: Track list items aligned to canvas tracks are still off by one lousy vertical pixel.
11.11.2010
        - WIP: Mixer and strips re-designed to be theme/font friendly - no more fixed STRIP_WIDTH. (Tim)
        - Fixed Slider, Knob and DoubleEntry classes. Knob anti-aliasing applied (where allowed).
        - Transport handle colour fixed - added setAutoFillBackground(true). 
10.11.2010
        - Ported transport window to Qt4. The handle color needs a fix (Orcan) 
09.11.2010
        - Fixed audio and midi strips and converted to Qt4. Looks OK now, but will be better... (Tim)
          TODO: Convert Slider, Knob, EffectRack, ComboBox classes etc. (After that the strips will be perfect.)
08.11.2010
	- Add missing link to libdl.so. Caused bulid failure on Fedora 14 (Orcan)
        - Fixed strip name label colours, also name label auto-font-sizing. (Tim) 
        - Updated some window flags (stay on top, delete on close...) (Tim)
07.11.2010
        - Mixer is fixed and converted to QT4. (Tim)